# fmpi

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  log.txt
R/: stats.R
R/include/: summary.R
apps/: CMakeLists.txt  factor_serial.cc  mergebench.cc  mpiPinning.cc  mpi_spsc.cc
apps/mergebench/: CMakeLists.txt  benchmark.hpp  lineplot.R  mergebench.R  mergebench.cc  parse_csv.awk  plot.sh  recursive.cc  run.sh  script.awk
apps/mergebench/src/: benchmark.cc  benchmark.hpp  parallel.cc  recursive.cc
benchmark/: CMakeLists.txt
benchmark/R/: plotShmem.R  stats.R
benchmark/apps/: Merge.hpp  OnesidedShmem.cc  TwosidedAlgorithms.cc  TwosidedAlgorithms.h  TwosidedAlgorithms.hpp  osu_latency.cc
benchmark/include/: MpiAlltoAllBench.h  Params.h  Params.hpp
benchmark/include/algorithms/: Merge.hpp
benchmark/osu/: osu.cc  osu.hpp  osu_ialltoall.cc  osu_ineigh_alltoall.cc  osu_latency.cc  osu_latency_mt.cc  osu_mbw_mr.cc
benchmark/plots/: splitCSV.sh
benchmark/plots/R/: plot.R  selectTop.R
benchmark/src/: MpiAlltoAllBench.cc  Params.cc  Version.h.in
benchmark/stencil-heat/: printarr_par.cc  stencil_mpi_ddt_multiple.cc  stencil_par.h
benchmarks/: collectLogs.sh  genPlots.sh  splitCSV.sh  syncLogs.sh
benchmarks/R/: plot.R  selectTop.R  stats.R  statsPerRank.R
cmake/: ClangTidy.cmake  CompilerFlags.cmake  CompilerWarnings.cmake  FindMPI.cmake  FindOpenMP.cmake  MPIImpl.cmake  SetupBoost.cmake  SetupHwloc.cmake  generate_version.cmake  mpi_version.cc
cmake/modules/: FindHwloc.cmake
doc/: ideas.md
include/: AlltoAll.h  Benchmark.h  Bruck.h  Constants.h  Debug.h  Factor.h  Macros.h  Math.h  Mpi.h  NumericRange.h  Random.h  Schedule.h  SharedMemory.h  Trace.h  Types.h  random.h  rtlx.h
include/container/: simple_vector.h
include/fmpi/: AlltoAll.h  AlltoAll.hpp  Alltoall.hpp  Bruck.h  Bruck.hpp  Config.hpp  Constants.h  Constants.hpp  Debug.h  Debug.hpp  Dispatcher.hpp  Exception.hpp  Factor.h  Factor.hpp  Function.hpp  Math.h  Math.hpp  Memory.h  Memory.hpp  Message.hpp  NeighborAlltoall.hpp  NumericRange.h  NumericRange.hpp  OpenMP.hpp  Operation.hpp  Pinning.hpp  Random.hpp  Schedule.h  Schedule.hpp  SharedMemory.h  SharedMemory.hpp  Span.hpp  Utils.hpp
include/fmpi/allocator/: BufferAllocator.hpp  ContiguousPoolAllocator.hpp  HeapAllocator.hpp
include/fmpi/alltoall/: Detail.hpp  MpiAlltoall.hpp  Waitall.hpp  Waitsome.hpp  WaitsomeOverlap.hpp
include/fmpi/common/: Porting.hpp
include/fmpi/concurrency/: Async.hpp  BufferedChannel.hpp  CacheLocality.hpp  Dispatcher.hpp  Future.hpp  MPMCQueue.h  MaybeLock.hpp  OpenMP.hpp  SPSC.hpp  SimpleConcurrentDeque.hpp  SimpleDispatcher.hpp  UnlockGuard.hpp
include/fmpi/container/: BoundedBuffer.hpp  FixedVector.hpp  InstrusiveList.hpp  IntrusiveList.hpp  StackContainer.hpp  buffered_channel.hpp  circularfifo.hpp  simple_vector.h  simple_vector.hpp
include/fmpi/detail/: Assert.hpp  Async.hpp  Capture.hpp  CollectiveArgs.hpp  CommState.h  CommState.hpp  Debug.h  Tags.hpp
include/fmpi/memory/: BlockAllocator.hpp  ContiguousPoolAllocator.hpp  DefaultInitAllocator.hpp  HeapAllocator.hpp  MpiAllocator.hpp  StdAllocator.hpp  ThreadAllocator.hpp
include/fmpi/memory/detail/: pointer_arithmetic.hpp
include/fmpi/mpi/: Algorithm.h  Algorithm.hpp  Collective.h  Dispatcher.hpp  Environment.h  Environment.hpp  Mpi.h  Mpi.hpp  PointToPoint.h  Rank.hpp  Request.h  Request.hpp  TypeMapper.h  TypeMapper.hpp  Types.h
include/fmpi/topo/: Tree.hpp
include/fmpi/util/: Math.hpp  NumericRange.hpp  Random.hpp  Trace.hpp
include/fusion/: AlltoAll.h  Bruck.h  Math.h  NumericRange.h  Schedule.h  SharedMemory.h
include/fusion/mpi/: Collective.h  Environment.h  Mpi.h  PointToPoint.h
include/mpi/: Collective.h  Environment.h  Mpi.h  PointToPoint.h  Types.h
jobs/: a2a.impi.debug.tpl  a2a.impi.tpl  a2a.intel.tpl  coolmuc.tpl  dashsort.dist.tpl  env.impi.gcc9.sh  genJobs.sh  impi_omp.sh  ng.a2a.impi.debug.tpl  ng.a2a.impi.rma.tpl  ng.a2a.impi.tpl  ng.a2a.merge.tpl  ng.a2a.pinning.impi.tpl  ng.impi.debug.tpl  ng.impi.tpl  ng.spsc.tpl  skx.supermuc.tpl  submit.py
libs/: CMakeLists.txt
libs/rtlx/: CMakeLists.txt
libs/rtlx/include/rtlx/: Assert.h  Assert.hpp  Debug.h  Enum.hpp  Ostream.hpp  ScopedLambda.hpp  Timer.h  Timer.hpp  Trace.h  Trace.hpp  UnorderedMap.hpp
libs/rtlx/src/: CMakeLists.txt  Trace.cc
libs/timer/: Timer.h  Trace.cc  Trace.h
misc/: check_files.pl
scripts/: concatLogs.sh  genLinePlot.sh  genPlaces.sh  memory.py  stats.sh  syncLogs.sh
scripts/R/: bruckPlot.R  linePlot.R  reqPlot-sidebyside.R  reqPlot.R  stats.R
scripts/R/internal/: gg_multiple.R  utils.R
scripts/osu/: osu_bw.R  osu_bw.sh  osu_ialltoall.R  osu_ialltoall.barplot.R  osu_ialltoall.sh  osu_latency.R  osu_latency.sh
src/: Benchmark.cc  CMakeLists.txt  Config.cc  Config.hpp.in  Constants.cc  Dispatcher.cc  Message.cc  MpiAlltoAllBench.cc  MpiAlltoAllBench.h  Operation.cc  Pinning.cc  Schedule.cc  Trace.cc  Version.h.in  alltoall.cc  common.cc  factor_mpi.cc  factor_serial.cc  neighbor_alltoall.cc  synchronized_barrier.cc
src/common/: Porting.cc
src/concurrency/: CacheLocality.cc  Future.cc
src/detail/: Assert.cc
src/memory/: BlockAllocator.cc  ThreadAllocator.cc
src/mpi/: Algorithm.cc  Environment.cc  Rank.cc  Request.cc
src/topo/: BinaryTree.cc  Tree.cc
src/util/: Trace.cc
